[package]
name = "ez_xhci"
version = "0.1.0"
edition = "2024"

[dependencies]
bitfield = "0.19.1"
debug-ignore = "1.0.5"
log = "0.4.27"
num_enum = { version = "0.7.4", default-features = false }
split_slice = "1.0.0"
volatile = { version = "0.6.1", features = ["derive", "unstable"] }
zerocopy = { version = "0.8.26", default-features = false, features = [
    "derive",
] }
